@@ -189,140 +189,3 @@ fail:
 
   return retcode;
 }
-
-
-
-/**
- * @brief Extracts fingerprints of signing public keys in a given signature file.
- *
- * Works like nasl_verify_signature, but always returns a string with the
- * fingerprints in it (NULL if error), even if the keys are not trusted.
- *
- * @param filename Path to the signed file (e.g. /../check_killerapp.nasl).
- *
- * @return A string with comma- separated fingerprints or NULL if error.
- *
- * @see nasl_verify_signature( const char* filename )
- */
-char *
-nasl_extract_signature_fprs (const char *filename)
-{
-  char *sigfilename = NULL;
-  gpgme_error_t err = GPG_ERR_NO_ERROR;
-  gpgme_ctx_t ctx;
-  gpgme_data_t sig = NULL;
-  gpgme_data_t text = NULL;
-  gpgme_signature_t signature;
-  /** @todo Once there was a size limitation for the cache.
-    * It was removed since OpenVAS > 2.0 and this
-    * fixed size here should eventually be replaced by dynamic solution. */
-  char *key_fprs = emalloc ((3 * 48 + 3) * sizeof (char));
-  gboolean failed = FALSE;
-  char *return_string = NULL;
-
-  key_fprs[0] = '\0';
-
-  ctx = openvas_init_gpgme_sysconf_ctx ();
-  if (ctx == NULL)
-    {
-      err = GPG_ERR_GENERAL;
-      failed = TRUE;
-    }
-
-  if (!err)
-    {
-      nasl_trace (NULL,
-                  "nasl_extract_signature_fprs: loading scriptfile '%s'\n",
-                  filename);
-      err = gpgme_data_new_from_file (&text, filename, 1);
-      if (err)
-        {
-          print_gpgme_error ("gpgme_data_new_from_file", err);
-          failed = TRUE;
-        }
-    }
-
-  if (!err)
-    {
-      sigfilename = emalloc (strlen (filename) + 4 + 1);
-      strcpy (sigfilename, filename);   /* Flawfinder: ignore */
-      strcat (sigfilename, ".asc");
-
-      nasl_trace (NULL,
-                  "nasl_extract_signature_fprs: loading signature file '%s'\n",
-                  sigfilename);
-      err = gpgme_data_new_from_file (&sig, sigfilename, 1);
-      if (err)
-        {
-          /* If the file doesn't exist, fail without an error message
-           * because an unsigned file is a very common and expected
-           * condition */
-          if (gpgme_err_code (err) != GPG_ERR_ENOENT)
-            print_gpgme_error ("gpgme_data_new_from_file", err);
-          else
-            nasl_trace (NULL, "nasl_extract_signature_fprs: %s: %s\n",
-                        sigfilename, gpgme_strerror (err));
-          failed = TRUE;
-        }
-    }
-
-  if (!err)
-    {
-      err = gpgme_op_verify (ctx, sig, text, NULL);
-      nasl_trace (NULL,
-                  "nasl_extract_signature_fprs: gpgme_op_verify -> '%d'\n",
-                  err);
-      if (err)
-        {
-          print_gpgme_error ("gpgme_op_verify", err);
-          failed = TRUE;
-        }
-    }
-
-  if (!err)
-    {
-      gpgme_verify_result_t result = gpgme_op_verify_result (ctx);
-
-      signature = result->signatures;
-      // Concatenate the fingerprints of the signatures in the sig (.asc) file.
-      while (signature)
-        {
-          // Enough mem to store the new fingerprint (old + ',' + new + '\0')?
-          if (strlen (key_fprs) + strlen (signature->fpr) < (3 * 48 + 1))
-            {
-              // If already fingerprint(s) found, separate new one by ','.
-              if (key_fprs[0] != '\0')
-                {
-                  strcat (key_fprs, ",");       /* RATS: ignore */
-                  strcat (key_fprs, signature->fpr);    /* RATS: ignore */
-                }
-              // Else it is the first key found, copy it.
-              else
-                {
-                  strcpy (key_fprs, signature->fpr);
-                }
-            }
-          else
-            {
-              printf ("Too much fingerprints for %s found. "
-                      "Clients will see only parts of them.", filename);
-              nasl_trace (NULL,
-                          "nasl_extract_signature_fprs: cropping fingerprints\n");
-            }
-
-          signature = signature->next;
-        }
-    }
-
-  gpgme_data_release (sig);
-  gpgme_data_release (text);
-  if (ctx != NULL)
-    gpgme_release (ctx);
-  efree (&sigfilename);
-
-  if (failed == FALSE)
-    return_string = estrdup (key_fprs);
-
-  efree (&key_fprs);
-  return return_string;
-}
